Ticket #27828: Fixed unnecessary scrollbars in some cases.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -383,6 +383,7 @@ div.cMediaQuery .rf_columnsLayout.keep > .rf_inputCell {
 	min-width: calc(100% - var(--RF_HORIZONTAL_GAP_COLUMNS_LIST_ENTRY));
 	/* width: calc(100% - 25px); */
   	box-sizing: border-box;
+  	overflow: hidden;
 }
 
 .rf_columnsLayout > .rf_line,
@@ -799,7 +800,7 @@ div.cMediaQuery .rf_columnsLayout.keep > .rf_inputCell {
 }
 
 .cFormEditorPreview .rf_dropTarget { 
-	height: calc(100% - 20px);
+	height: calc(100% - 2 * var(--spacing-03));
 }
 
 .rf_editor, .cFormEditorPreview.rf_dropTarget { 
